//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  boards Board [not null]
  role Role [not null]
  expense Expense [not null]
  expenseDetails ExpenseDetails [not null]
  board Board [not null]
  paidBy Expense [not null]
  wiseToken String
  wiseProfileId String
  mainCurrency Currency
  transfersReceived Transfer [not null]
  transfersSent Transfer [not null]
}

Table Board {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  author User
  authorId String
  currency Currency [not null]
  users User [not null]
  expenses Expense [not null]
  Transfer Transfer [not null]
}

Table Expense {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  author User
  authorId String
  totalAmount Int [not null]
  breakdown ExpenseDetails [not null]
  board Board
  boardId String
  paidBy User [not null]
  paidById String [not null]
}

Table ExpenseDetails {
  id String [pk]
  expense Expense [not null]
  expenseId String [not null]
  paidForId String [not null]
  paidFor User [not null]
  amount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Transfer {
  id String [pk]
  senderId String [not null]
  sender User [not null]
  recipientId String [not null]
  recipient User [not null]
  amount Int [not null]
  currency Currency [not null]
  status String [not null]
  boardId String [not null]
  board Board
}

Table participants {
  boardsId String [ref: > Board.id]
  usersId String [ref: > User.id]
}

Enum Role {
  ADMIN
  USER
}

Enum Currency {
  EUR
  USD
  CNY
  HKD
  SGD
  TWD
  GBP
}

Ref: Board.authorId > User.id

Ref: Expense.authorId > User.id

Ref: Expense.boardId > Board.id

Ref: Expense.paidById > User.id

Ref: ExpenseDetails.expenseId > Expense.id [delete: Cascade]

Ref: ExpenseDetails.paidForId > User.id

Ref: Transfer.senderId > User.id

Ref: Transfer.recipientId > User.id

Ref: Transfer.boardId > Board.id